// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot Testing Disabling Tooltip 1`] = `
<ForwardRef(Fab)
  color="primary"
  sx={
    Object {
      "borderRadius": 1,
      "bottom": 2,
      "position": "fixed",
      "right": 2,
      "zIndex": "speedDial",
    }
  }
>
  <Memo(ForwardRef(AccessAlarmIcon)) />
</ForwardRef(Fab)>
`;

exports[`Snapshot Testing Optional Props 1`] = `
<Memo()
  id="tooltip"
  title=""
>
  <ForwardRef(Fab)
    color="primary"
    onClick={[MockFunction]}
    sx={
      Object {
        "borderRadius": 1,
        "bottom": 2,
        "position": "fixed",
        "right": 2,
        "zIndex": "speedDial",
      }
    }
  >
    <Memo(ForwardRef(AccessAlarmIcon)) />
  </ForwardRef(Fab)>
</Memo()>
`;

exports[`Snapshot Testing Required Props 1`] = `
<Memo()
  title="Sample"
>
  <ForwardRef(Fab)
    color="primary"
    onClick={[MockFunction]}
    sx={
      Object {
        "borderRadius": 1,
        "bottom": 2,
        "position": "fixed",
        "right": 2,
        "zIndex": "speedDial",
      }
    }
  >
    <Memo(ForwardRef(AccessAlarmIcon)) />
  </ForwardRef(Fab)>
</Memo()>
`;
